--- a/index.html
+++ b/index.html
@@ -66,6 +66,87 @@
     GSI.GLOBALS.isCreditShow = true;
   </script>
   
+<script>
+function geojson_style(prop) {
+  var s = {};
+  for(name in prop) {
+    if(name.match(/^_/) && !name.match(/_markerType/)){
+      if( prop['_markerType']=='Circle' && name =='_radius'){continue;}
+      s[name.substr(1)]=prop[name];
+    }
+  }
+  return s;
+}
+
+function popup_properties(prop) {
+  var s = ''
+  for(name in prop) {
+    if(!name.match(/^_/)){
+      s += name + "：" + prop[name] + "<br>";
+    }
+  }
+  return s;
+}
+
+
+// スタイルつき GeoJSON読み込み
+// 「./sample1.geojson」の部分を適宜変更してください。
+var xhr = new XMLHttpRequest();
+xhr.open('GET', './bousaitameike191008.geojson', false);
+xhr.send(null);
+var sampledata = JSON.parse(xhr.responseText);
+
+var sampleLayer = L.geoJson(sampledata, {
+  pointToLayer: function (feature, latlng) {
+    var s = geojson_style(feature.properties);
+    if(feature.properties['_markerType']=='Icon'){
+      var myIcon = L.icon(s);
+      return L.marker(latlng, {icon: myIcon});
+    }
+    if(feature.properties['_markerType']=='DivIcon'){
+      var myIcon = L.divIcon(s);
+      return L.marker(latlng, {icon: myIcon});
+    }
+    if(feature.properties['_markerType']=='Circle'){
+      return L.circle(latlng,feature.properties['_radius'],s);
+    }
+    if(feature.properties['_markerType']=='CircleMarker'){
+      return L.circleMarker(latlng,s);
+    }
+  },
+  style: function (feature) {
+    if(!feature.properties['_markerType']){
+      var s = geojson_style(feature.properties);
+      return s;
+    }
+  },
+  onEachFeature: function (feature, layer) {
+    layer.bindPopup(popup_properties(feature.properties));
+  }
+});
+
+
+// 背景地図設定
+var std = L.tileLayer(
+  'https://cyberjapandata.gsi.go.jp/xyz/std/{z}/{x}/{y}.png',
+  {
+    attribution: "<a href='https://maps.gsi.go.jp/development/ichiran.html' target='_blank'>地理院タイル（標準地図）</a>", 
+    maxNativeZoom: 18,
+    maxZoom: 18,
+    opacity:1
+  }
+);
+
+// 中心位置設定
+var map = L.map('mapdiv', {
+  center: [33.674640,132.905731], zoom: 10, layers: [std,sampleLayer]
+});
+
+L.control.scale({imperial: false}).addTo(map);
+var baseLayers = {"地理院タイル（標準地図）": std};
+var overlays = {'サンプル': sampleLayer };
+L.control.layers(baseLayers, overlays,{position:'topright',collapsed:false}).addTo(map);
+</script>
   <noscript>
     <div class="noscript">
       JavaScriptを有効にしてご覧ください。
