--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ function popup_properties(prop) {
 // スタイルつき GeoJSON読み込み
 // 「./sample1.geojson」の部分を適宜変更してください。
 var xhr = new XMLHttpRequest();
-xhr.open('GET', './bousaitameike191008.geojson', false);
+xhr.open('GET', './layers_txt/bousaitameike191008.geojson', false);
 xhr.send(null);
 var sampledata = JSON.parse(xhr.responseText);
 
