--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ function popup_properties(prop) {
 var xhr = new XMLHttpRequest();
 xhr.open('GET', './layers_txt/bousaitameike191008.geojson', false);
 xhr.send(null);
-var sampledata =  L.geoJson(xhr.responseText);
+var sampledata = JSON.parse(xhr.responseText);
 
 var sampleLayer = L.geoJson(sampledata, {
   pointToLayer: function (feature, latlng) {
