--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ var std = L.tileLayer(
 );
 
 // 中心位置設定
-var map = L.map('mapdiv', {
+var map = L.map('map', {
   center: [33.674640,132.905731], zoom: 10, layers: [std,sampleLayer]
 });
 
