--- a/index.html
+++ b/index.html
@@ -156,19 +156,20 @@ var sampleLayer = L.geoJson(sampledata, {
 
 
 // 背景地図設定
-var std = L.tileLayer(
-  'https://cyberjapandata.gsi.go.jp/xyz/std/{z}/{x}/{y}.png',
-  {
-    attribution: "<a href='https://maps.gsi.go.jp/development/ichiran.html' target='_blank'>地理院タイル（標準地図）</a>", 
-    maxNativeZoom: 18,
-    maxZoom: 18,
-    opacity:1
-  }
-);
+//var std = L.tileLayer(
+//  'https://cyberjapandata.gsi.go.jp/xyz/std/{z}/{x}/{y}.png',
+//  {
+    //attribution: "<a href='https://maps.gsi.go.jp/development/ichiran.html' target='_blank'>地理院タイル（標準地図）</a>", 
+    //maxNativeZoom: 18,
+    //maxZoom: 18,
+    //opacity:1
+  //}
+//);
 
 // 中心位置設定
 var map = L.map('map', {
-  center: [33.674640,132.905731], zoom: 10, layers: [std,sampleLayer]
+  //center: [33.674640,132.905731], zoom: 10, layers: [std,sampleLayer]
+  center: [33.674640,132.905731], zoom: 10, layers: [sampleLayer]
 });
 
 L.control.scale({imperial: false}).addTo(map);
